tests/typestate_compile_fail/skip_cgroup_attach.stderr
error[E0599]: no method named `drop_credentials` found for struct `Sandbox<MountsPrivate>` in the current scope
  --> tests/typestate_compile_fail/skip_cgroup_attach.rs:17:13
   |
17 |     sandbox.drop_credentials(None, None);
   |             ^^^^^^^^^^^^^^^^ method not found in `Sandbox<MountsPrivate>`
   |
   = note: the method was found for
           - `Sandbox<CgroupAttached>`
